--- a/Day 1 - Stop Watch App/Base.lproj/Main.storyboard
+++ b/Day 1 - Stop Watch App/Base.lproj/Main.storyboard
@@ -1,24 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+            <string>HelveticaNeue-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Day_1___Stop_Watch_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d4x-Q3-VHO">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="xzr-rF-2pL"/>
+                                </constraints>
+                                <color key="barTintColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <items>
+                                    <navigationItem title="Stopwatch" id="OE5-Rz-H8i"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YwG-Ok-8D9">
+                                <rect key="frame" x="0.0" y="64" width="375" height="90"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="2JJ-NO-vaM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="65"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kec-nA-eSn">
+                                <rect key="frame" x="100" y="166" width="70" height="70"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="reV-BV-fxV"/>
+                                    <constraint firstAttribute="width" constant="70" id="yIc-4z-KDS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" red="1" green="0.53038453110542927" blue="0.54779647752632599" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startStopAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hZC-It-RoD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fae-m0-Shg">
+                                <rect key="frame" x="205" y="166" width="70" height="70"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="BlJ-h1-HFC"/>
+                                    <constraint firstAttribute="width" constant="70" id="MPo-aU-SPZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                <state key="normal" title="LAP">
+                                    <color key="titleColor" red="0.8093522280561567" green="0.40491362189169544" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="lapResetAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tUr-VU-ni7"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VHy-Wv-xhx">
+                                <rect key="frame" x="0.0" y="250" width="375" height="417"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ndw-2w-K9F"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="JvE-YQ-NuQ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="d4x-Q3-VHO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1l8-Hy-bV9"/>
+                            <constraint firstItem="d4x-Q3-VHO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5Nk-1K-IM5"/>
+                            <constraint firstItem="Kec-nA-eSn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="ARa-bH-XMy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fae-m0-Shg" secondAttribute="trailing" constant="100" id="Bvg-DZ-Hzo"/>
+                            <constraint firstItem="VHy-Wv-xhx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="CC5-gh-No4"/>
+                            <constraint firstItem="VHy-Wv-xhx" firstAttribute="top" secondItem="Kec-nA-eSn" secondAttribute="bottom" constant="14" id="FMw-nv-9ee"/>
+                            <constraint firstItem="YwG-Ok-8D9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="d3d-hS-Qgh"/>
+                            <constraint firstItem="VHy-Wv-xhx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fWX-lm-3sj"/>
+                            <constraint firstItem="VHy-Wv-xhx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="hED-jY-inM"/>
+                            <constraint firstItem="YwG-Ok-8D9" firstAttribute="top" secondItem="d4x-Q3-VHO" secondAttribute="bottom" id="nma-ob-FnC"/>
+                            <constraint firstItem="YwG-Ok-8D9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="raz-ia-55K"/>
+                            <constraint firstItem="Kec-nA-eSn" firstAttribute="top" secondItem="YwG-Ok-8D9" secondAttribute="bottom" constant="12" id="xMR-4i-uPf"/>
+                            <constraint firstItem="Fae-m0-Shg" firstAttribute="top" secondItem="YwG-Ok-8D9" secondAttribute="bottom" constant="12" id="xW5-Ff-W3B"/>
+                            <constraint firstItem="d4x-Q3-VHO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zNK-6K-EBG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="lapResetButton" destination="Fae-m0-Shg" id="EAJ-RU-t8a"/>
+                        <outlet property="lapsTableView" destination="VHy-Wv-xhx" id="XPZ-cO-hGx"/>
+                        <outlet property="startStopButton" destination="Kec-nA-eSn" id="rxM-xL-62S"/>
+                        <outlet property="stopwatchLabel" destination="YwG-Ok-8D9" id="mj8-hg-kB2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
